sell product init
